Prep for polymer3

--- a/demo/grids.html
+++ b/demo/grids.html
@@ -7,10 +7,10 @@
 
   <title>Material Theme Grid</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
-  <script type="module" src="../../@polymer/iron-ajax/iron-ajax.js"></script>
+  <script type="module" src="@polymer/iron-ajax/iron-ajax.js"></script>
   <script type="module" src="../../vaadin-grid/demo/x-data-provider.js"></script>
   <script type="module" src="../vaadin-grid-column.js"></script>
   <script type="module" src="../vaadin-grid-column-group.js"></script>
