--- a/demo/tabs.html
+++ b/demo/tabs.html
@@ -7,12 +7,12 @@
 
   <title>Material Theme Tabs</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-tabs.js"></script>
 
-  <script type="module" src="../../@polymer/iron-icons/iron-icons.js"></script>
+  <script type="module" src="@polymer/iron-icons/iron-icons.js"></script>
 
   <style>
     [unresolved] {
