--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -7,10 +7,10 @@
 
   <title>Material Theme Button</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
-  <script type="module" src="../../@polymer/iron-icons/iron-icons.js"></script>
+  <script type="module" src="@polymer/iron-icons/iron-icons.js"></script>
   <script type="module" src="../vaadin-button.js"></script>
 
   <style>
