--- a/demo/compatibility.html
+++ b/demo/compatibility.html
@@ -7,7 +7,7 @@
 
   <title>Vaadin Material Theme Browser Compatibility</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./my-dark-ui.js"></script>
   <script type="module" src="./common.js"></script>
 
