--- a/demo/customization.html
+++ b/demo/customization.html
@@ -7,9 +7,9 @@
 
   <title>Vaadin Material Theme Customization</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
-  <script type="module" src="../../@polymer/iron-icons/iron-icons.js"></script>
+  <script type="module" src="@polymer/iron-icons/iron-icons.js"></script>
 
   <style>
     [unresolved] {
