--- a/demo/date-pickers.html
+++ b/demo/date-pickers.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Date Picker</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-date-picker.js"></script>
@@ -32,7 +32,7 @@
       <script type="module">
 import './common.js';
 import '../vaadin-date-picker.js';
-import { Base } from '../../@polymer/polymer/polymer-legacy.js';
+import { Base } from '@polymer/polymer/polymer-legacy.js';
 // Async call needed here for IE11 compatibility.
 Base.async(function() {
   var datepickers = document.querySelectorAll('vaadin-date-picker[show-week-numbers]');
