--- a/demo/dialogs.html
+++ b/demo/dialogs.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Dialog</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-dialog.js"></script>
