--- a/demo/dropdown-menus.html
+++ b/demo/dropdown-menus.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Dropdown Menu</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
   <script type="module" src="./person-item.js"></script>
 
