--- a/demo/ordered-layouts.html
+++ b/demo/ordered-layouts.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Ordered Layout</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-horizontal-layout.js"></script>
