--- a/demo/progress-bars.html
+++ b/demo/progress-bars.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Progress Bar</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-progress-bar.js"></script>
