--- a/demo/radio-buttons.html
+++ b/demo/radio-buttons.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Radio Buttons</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <script type="module" src="../vaadin-radio-button.js"></script>
