--- a/demo/typography.html
+++ b/demo/typography.html
@@ -7,7 +7,7 @@
 
   <title>Material Theme Typography</title>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./common.js"></script>
 
   <style>
