--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Vaadin Material Theme</title>
 
-  <script src="../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="./demo/common.js"></script>
 
   <style>
