--- a/test/baseline.html
+++ b/test/baseline.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Material components baseline test</title>
     <meta name="viewport" content="width=device-width">
-    <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="../../@polymer/iron-icons/iron-icons.js"></script>
+    <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script type="module" src="@polymer/iron-icons/iron-icons.js"></script>
     <script type="module" src="./all-theme-imports.js"></script>
     <script type="module" src="./all-src-imports.js"></script>
     <!-- FIXME(polymer-modulizer):
