--- a/test/sink.html
+++ b/test/sink.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Material components kitchen sink test</title>
     <meta name="viewport" content="width=device-width">
-    <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="../../@polymer/iron-icons/iron-icons.js"></script>
+    <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script type="module" src="@polymer/iron-icons/iron-icons.js"></script>
     <script type="module" src="./all-theme-imports.js"></script>
     <script type="module" src="./all-src-imports.js"></script>
     <!-- FIXME(polymer-modulizer):
@@ -210,7 +210,7 @@ document.body.appendChild($_documentContainer.content);
 </script>
 
     <script type="module">
-import '../../@polymer/iron-icons/iron-icons.js';
+import '@polymer/iron-icons/iron-icons.js';
 import './all-theme-imports.js';
 import './all-src-imports.js';
 document.getElementById('openDialog').addEventListener('click', function() {
